        - implemented $font->align() text output method, for simple output
          of aligned text
        - created Imager::Font::Wrap::wrap_text to perform simple text 
          wrapping
        - FT1, FT2 and T1 fonts now support the face_name method
        - FT1, FT2 and T1 now support the glyph_names() method
        - Debian woody supplied FT2.0.9, which didn't support 
          FT_Has_PS_Names(), so we use the FT_HAS_GLYPH_NAMES() macro 
          instead.
        - some older FT1 don't define TT_MS_LANGID_ENGLISH_GENERAL,
          which we use, define it if freetype doesn't.
        - Added extra options to rubthrough() so only a subpart of
          source image is used.
        - the image fills didn't handle filling with source images of
          less than four channels correctly
        - added comment support the postfix transform2() expression
          parser
        - transform2() can now produce images with other than 3 channels.
        - added a correct T_AVREF input mapping to the typemap to 
          simplify parameter lists
	- shut off one of the align subtests in the ft2 test.  The triggering
	  is likely an ft2 bug.
        - removed some half written scaling optimization code.
	- added /sw/lib and /sw/include to the Makefile.PL code for osX.
	- removed all references to the www.eecs.umich.edu page and changed
	  them to imager.perl.org ones.

0.43
        - added log() and exp() functions to transform2()
	- change the getpN() functions in transform2() to set a 
	  reasonable alpha if the input image has no alpha
	- document the constants that transform2() defines
	- skip the right number of tests when FT2 isn't available
	- This version pushed to CPAN because of skip problem in FT2 test.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/~addi/perl/Imager/

=================================================================
